--- a/m_account_index.html
+++ b/m_account_index.html
@@ -1,5 +1,3 @@
-
-{% load myfilter %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -23,8 +21,7 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>个人中心</title>
-    <script src="js/mui.min.js"></script>
-    <link href="css/mui.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="css/mui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/m_common.css"/>
     <link rel="stylesheet" type="text/css" href="css/m_account_index.css"/>
 </head>
@@ -32,33 +29,29 @@
 	<body>
 		<div class="mui-content">
 			<div class="top">
-        <a id="switch_device" class="diannao">切换到电脑版</a>
-        	<img src="/static/images/user-0{{user.id| modulo:'4'}}.png" alt="用户头像" />
-<!--         <img src="images/user-02.png" alt="用户头像" />
-        <img src="images/user-03.png" alt="用户头像" />
-        <img src="images/user-04.png" alt="用户头像" /> -->
-				<a href="{% url 'account_settings' %}"><number>{{user.mobile}}</number></a>
+        	<img id="userimg" src="images/user-01.png" alt="用户头像" />
+				<a href="m_account_settings.html"><number id="mobile"></number><i class="icon iconfont">&#xe63d;</i></a>
 			</div>
 
 			<div class="mui-row">
 		        <div class="mui-col-sm-4 mui-col-xs-4">
 		            <li class="first mui-table-view-cell">
 		                <a>
-		                    	累计收益（元）<br /><br /><span><number>{{user.accu_income}}</number></span>
+		                    	累计收益（个）<br /><br /><span><number id="accu_income"></number></span>
 		                </a>
 		            </li>
 		        </div>
 		        <div class="mui-col-sm-4 mui-col-xs-4">
 		            <li class="mui-table-view-cell">
 		                <a>
-		                    	现金余额（元）<br /><br /><span><number>{{user.balance}}</number></span>
+		                    	剩余福币（个）<br /><br /><span><number id="balance"></number></span>
 		                </a>
 		            </li>
 		        </div>
 		        <div class="mui-col-sm-4 mui-col-xs-4">
 		            <li class="mui-table-view-cell">
 		                <a>
-		                    	剩余积分<br /><br /><span><number>{{user.scores}}</number></span>
+		                    	剩余积分<br /><br /><span><number id="scores"></number></span>
 		                </a>
 		            </li>
 		        </div>
@@ -66,96 +59,114 @@
 
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
-			            <a class="icon-02 mui-navigate-right" href="{% url 'account_charge' %}">
-			                 资金管理
+			            <a class="icon-qiandai mui-navigate-right" href="m_account_settings.html">
+			                 福币管理
 			            </a>
 			        </li>
 			        <li class="mui-table-view-cell">
-			            <a class="icon-03 mui-navigate-right"  href="{% url 'account_score' %}">
+			            <a class="icon-jifen mui-navigate-right"  href="m_account_settings.html">
 			                 	积分管理
 			            </a>
 			        </li>
 
 			</ul>
 			<ul class="mui-table-view">
-
 			        <li class="mui-table-view-cell">
-			            <a class="icon-04 mui-navigate-right"  href="{% url 'account_welfare' %}">
+			            <a class="icon-iconfontfuli mui-navigate-right"  href="m_account_settings.html">
 			                 	福利管理
 			            </a>
 			        </li>
 			       <li class="mui-table-view-cell">
-			            <a class="icon-05 mui-navigate-right"  href="{% url 'account_coupon' %}">
+			            <a class="icon-youhuiquan mui-navigate-right"  href="m_account_settings.html">
 			                 	优惠券管理
 			            </a>
 			        </li>
 			</ul>
 			<ul class="mui-table-view">
-
 			        <li class="mui-table-view-cell">
-			            <a class="icon-06 mui-navigate-right"  href="{% url 'strategy' %}">
+			            <a class="icon-fuligonglve mui-navigate-right"  href="m_account_settings.html">
 			                 	挖福利攻略
 			            </a>
 			        </li>
               <li class="mui-table-view-cell">
-                  <a class="icon-07 mui-navigate-right"  href="{% url 'account_invite' %}">
+                  <a class="icon-yaoqing mui-navigate-right"  href="m_account_settings.html">
                         邀请好友
                   </a>
               </li>
 			</ul>
 
 		</div>
-
-		<!--底部导航-->
-	<footer>
-    	<ul class="clearfix tc">
-        	<li>
-            	<a href="{%url 'index'%}">
-                <img src="images/nav1.png"/>
-            	<span>免费福利</span>
-                </a>
-            </li>
-        	<li>
-            	<a href="{%url 'task'%}">
-                <img src="images/nav2.png"/>
-            	<span>体验福利</span>
-                </a>
-            </li>
-        	<li>
-            	<a href="{%url 'finance'%}">
-                <img src="images/nav3.png"/>
-            	<span>理财福利</span>
-                </a>
-            </li>
-        	<li class="on">
-            	<a href="{%url 'account_index'%}">
-                <img src="images/nav4s.png"/>
-            	<span>个人中心</span>
-                </a>
-            </li>
-        </ul>
-    </footer>
+	<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
+	<script type="text/javascript" charset="UTF-8" src="js/UserInfo.js"></script>
     <script type="text/javascript" charset="utf-8">
       	mui.init();
+      	var get_userinfo_url = "http://m.wafuli.cn/app/user/";
+      	mui.plusReady(function() {
+      		plus.webview.currentWebview().addEventListener('show',function(){
+      			if (!UserInfo.has_login()){
+      				console.log('11111111');
+					mui.openWindow({
+			            url: "a_login.html",
+			            id:"login",
+			            styles: {
+			                top: 0,
+			                bottom: 0
+			            },
+			            show: {
+			                aniShow: 'slide-in-right',
+			            },
+			            extras:{
+			            	backid:self.id
+			            }
+			        });
+			        return;
+				}
+	      		
+				mui.ajax({
+					type: "post",
+					url: get_userinfo_url,
+					dataType: 'json',
+					data:{
+		    			token:UserInfo.token()
+		    		},
+					success: function(ret) {
+						if(ret.code==0){
+							document.getElementById('userimg').src = "images/user-0" + ret.userimg + ".png";
+							document.getElementById('mobile').innerText = ret.mobile;
+							document.getElementById('scores').innerText = ret.scores;
+	    					document.getElementById('accu_income').innerHTML = ret.accu_income;
+							document.getElementById('balance').innerText = ret.balance
+							document.getElementById('scores').innerText = ret.scores;
+	    				}
+	    				else if(ret.code<0){
+	    					console.log('22222');
+	    					mui.openWindow({
+					            url: "a_login.html",
+					            id:"login",
+					            styles: {
+					                top: 0,
+					                bottom: 0
+					            },
+					            show: {
+					                aniShow: 'slide-in-right',
+					            },
+					            extras:{
+					            	backid:self.id
+					            }
+					        });
+					        return;
+	    				}
+	    				else{
+	    					mui.alert(ret.msg);
+	    				}
+					},
+					error:function(xhr,type,errorThrown){
+						mui.alert(type);
+					}
+				});
+      		});
+		});
     </script>
-	<script>
-	mui.back = function(){
-		var history = window.history;
-		if (history.length > 3 ){
-			history.go(-3);
-		}
-		else{
-			history.back();
-		}
-	};
-	</script>
-	<script>
-	document.getElementById("switch_device").addEventListener("tap",function(){
-    	setCookie('mode', 'pc', 1, 'wafuli.cn');
-    	window.location.href = "http://www.wafuli.cn";
-    });
-	</script>
-	<script src="../js/cookie.js"></script>
 	</body>
 
 </html>
