--- a/m_finance.html
+++ b/m_finance.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
 <html>
-
 	<head lang="en">
 		<meta charset="UTF-8">
 		<!-- 优先使用 IE 最新版本和 Chrome -->
@@ -23,195 +22,77 @@
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<title>理财福利</title>
-		<script src="js/mui.min.js"></script>
-		<script src="js/mui.pullToRefresh.js"></script>
-		<script src="js/mui.pullToRefresh.material.js"></script>
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
-		<link rel="stylesheet" type="text/css" href="css/m_finance.css" />
+		<link rel="stylesheet" type="text/css" href="css/m_task.css" />
 	</head>
 
 	<body>
-		<header class="clearfix">
-        <img src="images/logo.png" alt="wafuli_logo" />
-        <a  class="fr" href="#"><img src="images/diannao.png" alt="前往pc端" /></a>
-    </header>
 		<div class="mui-content">
-			<!--选项卡部分-->
-			<div id="finance_slider" class="mui-slider mui-fullscreen">
-				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="#item1">最新</a>
-					<a class="mui-control-item" href="#item2">高收益</a>
-					<a class="mui-control-item" href="#item3">低风险</a>
-					<!--<a class="mui-control-item" href="#item5">优惠券</a>-->
-				</div>
-				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
-				<div class="mui-slider-group">
-					<div id="item1" class="mui-slider-item mui-control-content mui-active" value="1">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<!--banner部分-->
-								<div id="slider" class="mui-slider" >
-								 <div class="mui-slider-group mui-slider-loop">
-								   <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
-								   <div class="mui-slider-item mui-slider-item-duplicate">
-								     <a href="{{last_adv.url}}">
-								       <img src="{{last_adv.mpic.url}}">
-								     </a>
-								   </div>
-								{% for adv in adv_list %}
-								   <div class="mui-slider-item">
-								     <a href="{{adv.url}}">
-								       <img src="{{adv.mpic.url}}">
-								     </a>
-								   </div>
-								   {%endfor%}
-								   <!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
-								    <div class="mui-slider-item mui-slider-item-duplicate">
-								      <a href="{{first_adv.url}}">
-								        <img src="{{first_adv.mpic.url}}">
-								      </a>
-								    </div>
-								  </div>
-								  <div class="mui-slider-indicator">
-								    <div class="mui-indicator mui-active"></div>
-								    {% for adv in adv_list|slice:":-1" %}
-								    <div class="mui-indicator"></div>
-								    {%endfor%}
-								  </div>
-								</div>
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item2" class="mui-slider-item mui-control-content" value="2">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item3" class="mui-slider-item mui-control-content" value="3">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
+			<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<a class="mui-control-item" href="m_finance_sub1.html">最新</a>
+					<a class="mui-control-item" href="m_finance_sub2.html">高收益</a>
+					<a class="mui-control-item" href="m_finance_sub3.html">低风险</a>
 			</div>
-
 		</div>
-		<!--底部导航-->
-		<footer>
-			<ul class="clearfix tc">
-				<li>
-					<a href="{%url 'index'%}">
-						<img src="images/nav1.png" />
-						<span>免费福利</span>
-					</a>
-				</li>
-				<li>
-					<a href="{%url 'task'%}">
-						<img src="images/nav2.png" />
-						<span>体验福利</span>
-					</a>
-				</li>
-				<li class="on">
-					<a href="{%url 'finance'%}">
-						<img src="images/nav3s.png" />
-						<span>理财福利</span>
-					</a>
-				</li>
-				<li>
-					<a href="{%url 'account_index'%}">
-						<img src="images/nav4.png" />
-						<span>个人中心</span>
-					</a>
-				</li>
-			</ul>
-		</footer>
-
+		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
 		<script>
-			var get_finance_url = "{% url 'finance_json' %}";
-			mui.init({
-				swipeBack: true //启用右滑关闭功能
+			mui.init();
+			var subpages = ['m_finance_sub1.html','m_finance_sub2.html','m_finance_sub3.html'];
+			var subpage_style = {
+				top: '45px',
+				bottom: '0px',
+				hardwareAccelerated:true
+			};
+		
+			var aniShow = {};
+		
+			//创建子页面，首个选项卡页面显示，其它均隐藏；
+			mui.plusReady(function() {
+				setTimeout(function(){
+					preload();
+				},200);
 			});
-
-			(function($) {
-				//阻尼系数
-				var deceleration = mui.os.ios?0.003:0.0009;
-				$('.mui-scroll-wrapper').scroll({
-					bounce: true,
-					indicators: true, //是否显示滚动条
-					deceleration:deceleration
-				});
-				$.ready(function() {
-					//循环初始化所有上拉加载
-					$.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
-						var count = 0;
-						$(pullRefreshEl).pullToRefresh({
-							up: {
-								auto:true,
-								callback: function() {
-									var self = this;
-									var ul = self.element.querySelector('.mui-table-view');
-									get_finance_list(this,ul,count++,index);
-								//		ul.appendChild(createFragment(ul, index, 5));
-									//	self.endPullUpToRefresh(true);
-								}
-							}
-						});
-					});
-
-					function get_finance_list(obj,ul,n,index){
-						mui.ajax(get_finance_url,{
-							data:{
-								count:n,
-								type:index,
-							},
-							dataType:'json',//服务器返回json格式数据
-							type:'get',//HTTP请求类型
-							timeout:10000,//超时时间设置为10秒；
-//							headers:{'Content-Type':'application/json'},
-							success:function(data){
-								if (!data.length){
-									obj.endPullUpToRefresh(true);
-								}
-								else {
-									obj.endPullUpToRefresh(false);//参数为true代表没有更多数据了。
-									var table = document.body.querySelector('.mui-table-view');
-//									var cells = document.body.querySelectorAll('.mui-table-view-cell');
-									for (var i in data) {
-										var wel = data[i];
-										var li = document.createElement('li');
-										li.className = 'mui-table-view-cell';
-										li.innerHTML = '<a href="' + wel.url + '"><div class="title"><strong>'+ wel.title +
-											'</strong><span>官网利息：<font>' + wel.interest + '</font></span></div>'+
-											'<div class="container clearfix">'+
-											'<div><img src="' + wel.picurl + '" /><span>' + wel.category + '</span>'+
-											'</div><div class="inc2"><p>补贴收益：<number>+' + wel.benefit +
-											'</number></p><p>起投金额：' + wel.amount +
-											'</p><p>标期长度：' + wel.time + '</p></div></div></a>';
-										ul.appendChild(li);
-									}
-								}
-							},
-							error:function(xhr,type,errorThrown){
-								alert(type);
-							}
-						});
+			function preload(){
+				var self = plus.webview.currentWebview();
+				for(var i = 0; i < 3; i++) {
+					var temp = {};
+					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
+					if(i > 0) {
+						sub.hide();
+					} else {
+						temp[subpages[i]] = "true";
+						mui.extend(aniShow, temp);
 					}
-				});
-			})(mui);
-			var gallery = mui('#slider');
-			gallery.slider({
-				interval: 0 //自动轮播周期，若为0则不自动播放，默认为0；
+					self.append(sub);
+				}
+			}
+			//当前激活选项
+			var activeTab = subpages[0];
+			var title = document.getElementById("title");
+			//选项卡点击事件
+			mui('.mui-slider-indicator').on('tap', 'a', function(e) {
+				var targetTab = this.getAttribute('href');
+				if(targetTab == activeTab) {
+					return;
+				}
+				//更换标题
+	//			title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//显示目标选项卡
+				//若为iOS平台或非首次显示，则直接显示
+				if(mui.os.ios || aniShow[targetTab]) {
+					plus.webview.show(targetTab);
+				} else {
+					//否则，使用fade-in动画，且保存变量
+					var temp = {};
+					temp[targetTab] = "true";
+					mui.extend(aniShow, temp);
+					plus.webview.show(targetTab, "fade-in", 300);
+				}
+				//隐藏当前;
+				plus.webview.hide(activeTab);
+				//更改当前活跃的选项卡
+				activeTab = targetTab;
 			});
 		</script>
 	</body>
