--- a/m_index.html
+++ b/m_index.html
@@ -18,7 +18,6 @@
 	    <meta name="format-detection" content="telphone=no, email=no"/>
 	    <title>挖福利</title>
 	    <script src="js/mui.min.js"></script>
-	    <script src="js/app.js"></script>
 	    <link href="css/mui.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -35,11 +34,11 @@
 				<span class="mui-icon mui-icon-email"></span>
 				<span class="mui-tab-label">任务</span>
 			</a>
-			<a class="mui-tab-item" href="m_finance_main.html">
+			<a class="mui-tab-item" href="m_finance.html">
 				<span class="mui-icon mui-icon-contact"></span>
 				<span class="mui-tab-label">理财</span>
 			</a>
-			<a class="mui-tab-item" href="a_login.html">
+			<a class="mui-tab-item" href="m_account_index.html">
 				<span class="mui-icon mui-icon-gear"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">我的</span>
 			</a>
@@ -49,8 +48,7 @@
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
-//		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
-		var subpages = ['m_welfare.html','m_task.html','a_login.html'];
+		var subpages = ['m_welfare.html','m_task.html','m_finance.html','m_account_index.html'];
 		var subpage_style = {
 			top: '0px',
 			bottom: '51px',
