--- a/a_login.html
+++ b/a_login.html
@@ -142,15 +142,11 @@
 //						main_loaded_flag = true;
 //					});
 					var toMain = function() {
-						//使用定时器的原因：
-						//可能执行太快，main页面loaded事件尚未触发就执行自定义事件，此时必然会失败
-//						var id = setInterval(function () {
-//							if(main_loaded_flag){
-//								clearInterval(id);
-//								$.fire(mainPage, 'show', null);
-//								mainPage.show("pop-in");
-//							}
-//						},20);
+						var backid = self.backid;
+						console.log(backid);
+						var backwebview = plus.webview.getWebviewById(backid);
+						console.log(backwebview.id);
+						mui.fire(backwebview, 'login-refresh');
 						self.close();
 					};
 					//检查 "登录状态/锁屏状态" 结束
