--- a/m_finance_sub1.html
+++ b/m_finance_sub1.html
@@ -46,9 +46,9 @@
 			var slide_group = document.body.querySelector('.mui-slider-group');
 			var slide_indicator = document.body.querySelector('.mui-slider-indicator');
 			var table = document.body.querySelector('.mui-table-view');
-			var get_task_url = "http://m.wafuli.cn/finance_json";
-			var get_slider_url = "http://m.wafuli.cn/app/slider/?type=finance";
-			var host = "http://m.wafuli.cn";
+			var get_task_url = "http://test.wafuli.cn/finance_json";
+			var get_slider_url = "http://test.wafuli.cn/app/slider/?type=finance";
+			var host = "http://test.wafuli.cn";
 			var count = 0;
 			var gallery_firstrun = 0;
 			mui.init({
