--- a/m_finance_sub2.html
+++ b/m_finance_sub2.html
@@ -38,8 +38,8 @@
 		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
 		<script>
 			var table = document.body.querySelector('.mui-table-view');
-			var get_task_url = "http://m.wafuli.cn/finance_json";
-			var host = "http://m.wafuli.cn";
+			var get_task_url = "http://test.wafuli.cn/finance_json";
+			var host = "http://test.wafuli.cn";
 			var count = 0;
 			mui.init({
 				pullRefresh: {
