--- a/registration/m_invite_accept.html
+++ b/registration/m_invite_accept.html
@@ -48,7 +48,7 @@
 				var is_back = true;
 				var refer = document.referrer;
 				if(refer){
-					var flag = refer.indexOf("m.wafuli.cn");
+					var flag = refer.indexOf("test.wafuli.cn");
 					if (flag===-1){
 						is_back = false;
 					}
