--- a/registration/m_login.html
+++ b/registration/m_login.html
@@ -52,7 +52,7 @@
 					mui.alert('帐号或密码不能为空', '抱歉', function() {});
 					return;
 				}
-				mui.ajax('http://m.wafuli.cn/app/account/login/',{
+				mui.ajax('http://test.wafuli.cn/app/account/login/',{
 					data:{
 						username:username,
 						password:password,
