--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -100,9 +100,10 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.pullToRefresh.js"></script>
 		<script src="../js/mui.pullToRefresh.material.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="../js/UserInfo.js"></script>
 		<script>
 			mui.init();
-			var get_charge_url = "http://m.wafuli.cn/account/charge_json/";
+			var get_charge_url = "http://test.wafuli.cn/app/charge_json/";
 			var self = null;
 			mui.plusReady(function(){
 				self = plus.webview.currentWebview();
@@ -110,6 +111,7 @@
 				document.getElementById("balance").innerText = user.balance;
 				document.getElementById('userimg').src = user.img;
 				document.getElementById('mobile').innerText = user.mobile;
+				plus.nativeUI.closeWaiting();
 				self.show();
 			});
 			(function($) {
@@ -143,6 +145,7 @@
 							data:{
 								count:n,
 								type:index,
+								token:UserInfo.token()
 							},
 							dataType:'json',//服务器返回json格式数据
 							type:'get',//HTTP请求类型
@@ -211,18 +214,22 @@
 
 			document.getElementById('Btn').addEventListener("tap",function(){
 				mui.openWindow({
-		            url: "m_account_withdraw",
+		            url: "m_account_withdraw.html",
 		            id: "withdraw",
 		            styles: {
 		                top: 0,
 		                bottom: 0
 		            },
 		            show: {
+		            	autoShow:false,
 		                aniShow: 'slide-in-right',
 		            },
 		            waiting: {
 		                autoShow: false, //自动显示等待框
 		                title: '正在加载...', //等待对话框上显示的提示内容
+		            },
+		            extras:{
+		            	user:self.user
 		            }
 		        });
 			});
