--- a/account/m_account_invite.html
+++ b/account/m_account_invite.html
@@ -43,7 +43,7 @@
 		</div>
 		<div class="middle">
 			<h3>邀请链接</h3>
-      <textarea name="share-reg-url" rows="2" cols="20">http://m.wafuli.cn{% url 'invite_accept' %}?icode={{user.invite_code}}</textarea>
+      <textarea name="share-reg-url" rows="2" cols="20">http://test.wafuli.cn{% url 'invite_accept' %}?icode={{user.invite_code}}</textarea>
       <div id="share" class="share-btn"><img src="../images/share-friend.png"/></div>
 			<!-- <div class="yqm-bg"><p class="yao-qing-ma">{{user.invite_code}}</p></div> -->
 		</div>
@@ -83,7 +83,7 @@
 				}
 			});
       	});
-      	var share_url = 'http://m.wafuli.cn' + "{% url 'invite_accept' %}?icode=" + "{{user.invite_code}}";
+      	var share_url = 'http://test.wafuli.cn' + "{% url 'invite_accept' %}?icode=" + "{{user.invite_code}}";
       	var appId = "{{weixin_params.appId}}";
       	var timestamp = "{{weixin_params.timestamp}}";
       	var nonceStr = "{{weixin_params.nonceStr}}";
