--- a/m_detail_welfare.html
+++ b/m_detail_welfare.html
@@ -83,7 +83,7 @@
 			  //根据id向服务器请求新闻详情
 			  	if (type==="hongbao"){
 			  		exp_btn_ele.innerText="立即体验";
-			  		var url_get_content= "http://m.wafuli.cn/app/detail/hongbao/";
+			  		var url_get_content= "http://test.wafuli.cn/app/detail/hongbao/";
 			  		mui.ajax({
 						url:url_get_content + "?id=" + id,
 						dataType:"json",
@@ -118,7 +118,7 @@
 			  	}
 			  	else if (type==="youhuiquan"){
 			  		exp_btn_ele.innerText="立即领取";
-			  		var url_get_content= "http://m.wafuli.cn/app/detail/youhuiquan/";
+			  		var url_get_content= "http://test.wafuli.cn/app/detail/youhuiquan/";
 			  		mui.ajax({
 						url:url_get_content + "?id=" + id,
 						dataType:"json",
@@ -178,7 +178,7 @@
 					}
 				}
 				else if (type==="youhuiquan"){
-					var obtain_coupon_url = "http://m.wafuli.cn/app/obtain_youhuiquan/";
+					var obtain_coupon_url = "http://test.wafuli.cn/app/obtain_youhuiquan/";
 					mui.ajax({
 		    			url:obtain_coupon_url,
 		    			dataType:"json",
