--- a/m_task_senior.html
+++ b/m_task_senior.html
@@ -40,8 +40,8 @@
 		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.material.js"></script>
 		<script>
 			var table = document.body.querySelector('.mui-table-view');
-			var get_task_url = "http://m.wafuli.cn/task_json";
-			var host = "http://m.wafuli.cn";
+			var get_task_url = "http://test.wafuli.cn/task_json";
+			var host = "http://test.wafuli.cn";
 			var count = 0;
 			mui.init({
 				pullRefresh: {
