--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -100,7 +100,7 @@
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/mui.pullToRefresh.js"></script>
 		<script src="../js/mui.pullToRefresh.material.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="../js/UserInfo.js"></script>
+		<script type="text/javascript" src="../js/UserInfo.js"></script>
 		<script>
 			mui.init();
 			var get_charge_url = "http://test.wafuli.cn/app/charge_json/";
