--- a/account/m_account_change_password.html
+++ b/account/m_account_change_password.html
@@ -1,4 +1,3 @@
-{%load staticfiles%}
 <!DOCTYPE html>
 <html>
 
@@ -19,7 +18,6 @@
 		</header>
 		<div class="mui-content">
 			<form class="mui-input-group">
-				{%csrf_token%}
 				<div class="mui-input-row">
 					<input id='password' type="password" class=" mui-input" placeholder="请输入当前密码">
 				</div>
@@ -38,6 +36,7 @@
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/accounts/user-validate.js"></script>
+		<script src="../js/UserInfo.js"></script>
 		<script type="text/javascript" charset="utf-8">
 		      	mui.init();
 		      	document.getElementById("change_password").addEventListener('tap', function() {
@@ -53,20 +52,19 @@
 						mui.alert('您两次输入的密码不相同，请重新输入！', '抱歉');
 						return;
 					}
-					var csrfmiddlewaretoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
 					mui.ajax({
-						url: '',
+						url: 'http://test.wafuli.cn/app/password_change/',
 						dataType:"json",
 						type:'POST',
 						data : {
 							initp: password,
 							newp: new_password,
-							csrfmiddlewaretoken:csrfmiddlewaretoken
+							token:UserInfo.token()
 						},
 						success:function(ret){
 							mui.alert(ret.res_msg,callback=function(){
 								if (ret.code==0){
-									window.history.back();
+									mui.back();
 								}
 							});
 						},
