--- a/account/m_account_change_zhifubao.html
+++ b/account/m_account_change_zhifubao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -58,8 +57,9 @@
 		</div>
 		
 		<script src="../js/mui.min.js"></script>
-	    <script type="text/javascript">
-	    	var sendtelcode_url = "{% url 'phoneImageV' %}";
+	    <script src="../js/UserInfo.js"></script>
+	    <script>
+	    	var sendtelcode_url = "http://test.wafuli.cn/account/phoneImageV/";
 		    mui.init({
 				swipeBack:true //启用右滑关闭功能
 			});
@@ -102,14 +102,14 @@
 				}
 				var csrfmiddlewaretoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
 				mui.ajax({
-					url: '',
+					url: 'http://test.wafuli.cn/app/change_zhifubao/',
 					dataType:"json",
 					type:'POST',
 					data : {
 						account: zhifubao,
 						name: zhifubao_name,
 						telcode: telcode,
-						csrfmiddlewaretoken:csrfmiddlewaretoken
+						token:UserInfo.token()
 					},
 					success:function(ret){
 						mui.alert(ret.res_msg,callback=function(){
@@ -127,8 +127,9 @@
 				mui.ajax({
 					url : sendtelcode_url,
 					data : {
-						'action' : 'change_zhifubao',
-						},
+						action : 'change_zhifubao',
+						token: UserInfo.token()
+					},
 					timeout : 3000,
 					success : function(data) {
 						if (data.code != 0) {
