--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -22,7 +21,6 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>福利管理</title>
-    <script src="../js/mui.min.js"></script>
     <link href="../css/mui.min.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
     <link rel="stylesheet" type="text/css" href="../css/m_account_welfare.css"/>
@@ -49,7 +47,7 @@
 	                	<div class="icon">
 							<div></div>
 							<h4>体验福利</h4>
-							<p>	完成：<span>&nbsp;<number>{{statis.tcount_u}}</number>&nbsp;</span>个</p>
+							<p>	完成：<span><number id="finish_task"></number>&nbsp;</span>个</p>
 						</div>
 	                </li>
 	                <li class="list clearfix head">
@@ -74,7 +72,7 @@
                     	<div class="icon">
 							<div></div>
 							<h4>理财福利</h4>
-							<p>	完成：<span>&nbsp;<number>{{statis.fcount_u}}</number>&nbsp;</span>个</p>
+							<p>	完成：<span><number id="finish_finance"></number>&nbsp;</span>个</p>
 						</div>
                     </li>
                     <li class="list clearfix head-02">
@@ -94,12 +92,21 @@
 </div>
 
 
-  <script src="../js/mui.min.js"></script>
+  	<script src="../js/mui.min.js"></script>
 	<script src="../js/mui.pullToRefresh.js"></script>
 	<script src="../js/mui.pullToRefresh.material.js"></script>
+	<script src="../js/UserInfo.js"></script>
 	<script>
 		mui.init();
-		var get_welfare_url = "{% url 'get_user_welfare_json' %}";
+		mui.plusReady(function(){
+			self = plus.webview.currentWebview();
+			user = self.user;
+			document.getElementById("finish_task").innerText = user.tcount_u;
+			document.getElementById("finish_finance").innerText = user.fcount_u;
+			plus.nativeUI.closeWaiting();
+			self.show();
+		});
+		var get_welfare_url = "http://test.wafuli.cn/account/welfare_json/";
 		(function($) {
 			//阻尼系数
 			var deceleration = mui.os.ios?0.003:0.0009;
@@ -131,6 +138,7 @@
 						data:{
 							count:n,
 							type:index,
+							token:UserInfo.token()
 						},
 						dataType:'json',//服务器返回json格式数据
 						type:'get',//HTTP请求类型
